[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "dbt-main"
repository.workspace = true
version.workspace = true

[lints]
workspace = true


[target.'cfg(windows)'.dependencies]
dunce = "1.0.5"
powershell_script = "1.1.0"
windows = { version = "0.61", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
] }

[dependencies]
dbt-adapter = { workspace = true }
dbt-adapter-core = { workspace = true }
dbt-clap-core = { workspace = true }
dbt-cloud-config = { workspace = true }
dbt-common = { workspace = true }
dbt-compilation = { workspace = true }
dbt-dag = { workspace = true }
dbt-defer = { workspace = true }
dbt-df-providers = { workspace = true }
dbt-docs-server = { workspace = true }
dbt-error = { workspace = true }
dbt-features = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-index-core = { workspace = true }
dbt-init = { workspace = true }
dbt-jinja-utils = { workspace = true }
dbt-lineage-core = { workspace = true }
dbt-loader = { workspace = true }
dbt-login = { workspace = true }
dbt-metadata = { workspace = true }
dbt-metadata-parquet = { workspace = true }
dbt-parser = { workspace = true }
dbt-scheduler = { workspace = true }
dbt-schema-store = { workspace = true }
dbt-schemas = { workspace = true }
dbt-tasks-core = { workspace = true }
dbt-tasks-sa = { workspace = true }
dbt-telemetry = { workspace = true }
dbt-xdbc = { workspace = true }
dbt-yaml = { workspace = true }

arrow = { workspace = true }
astral-tokio-tar = { workspace = true }
async-compression = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
fancy-regex = { workspace = true }
futures = { workspace = true }
git-version = { version = "0.3.9" }
minijinja = { workspace = true }
pathdiff = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
run_script = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
vortex-client = { workspace = true }
vortex-events = { workspace = true }

[features]
default = ["embed-ui"]
embed-ui = ["dbt-docs-server/embed-ui"]

[dev-dependencies]
flate2 = { workspace = true }
tar = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["dbt-fusion-workspace-hack"]

[lib]
doctest = false
name = "dbt_lib"
path = "src/lib.rs"
