[package]
name = "dbt-platform-auth"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Credential types and resolver chain for dbt platform authentication"
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
base64 = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-schemas = { workspace = true }
dbt-yaml = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
