[package]
name = "dbt-tasks-core"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-adapter = { workspace = true }
dbt-adapter-core = { workspace = true }
dbt-common = { workspace = true }
dbt-dag = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-jinja-utils = { workspace = true }
dbt-pretty-table = { workspace = true }
dbt-schema-store = { workspace = true }
dbt-schemas = { workspace = true }
dbt-telemetry = { workspace = true }
dbt-yaml = { workspace = true }

arrow = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
minijinja = { workspace = true }
parking_lot = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
scc = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
