[package]
name = "dbt-tasks-sa"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-adapter = { workspace = true }
dbt-adapter-core = { workspace = true }
dbt-agate = { workspace = true }
dbt-common = { workspace = true }
dbt-compilation = { workspace = true }
dbt-csv = { workspace = true }
dbt-dag = { workspace = true }
dbt-df-providers = { workspace = true }
dbt-frontend-common = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-jinja-utils = { workspace = true }
dbt-loader = { workspace = true }
dbt-schema-store = { workspace = true }
dbt-schemas = { workspace = true }
dbt-tasks-core = { workspace = true }
dbt-telemetry = { workspace = true }
dbt-xdbc = { workspace = true }
dbt-yaml = { workspace = true }

arrow = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
minijinja = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lib]
name = "dbt_tasks_sa"
path = "src/lib.rs"
doctest = false
