[package]
name = "vortex-events"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
proto-rust = { path = "../proto-rust" }

dbt-common = { workspace = true }
dbt-env = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-jinja-utils = { workspace = true }
dbt-schemas = { workspace = true }
dbt-yaml = { workspace = true }
md5 = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
vortex-client = { workspace = true }


[lib]
name = "vortex_events"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true
